<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search_pet"
            android:icon="@drawable/ic_baseline_youtube_searched"
            android:title="@string/menu_search_pet" />
        <item
            android:id="@+id/nav_search_owner"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_search_owner" />
        <item
            android:id="@+id/nav_register_pet"
            android:icon="@drawable/ic_baseline_pets_24"
            android:title="@string/menu_register_pet" />
        <item
            android:id="@+id/nav_register_owner"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/menu_register_owner" />
    </group>
</menu>