<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.edu.ittepic.ladm_u3_practica2_veterinariafirebase.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search_pet"
        android:name="mx.edu.ittepic.ladm_u3_practica2_veterinariafirebase.ui.search_pets.SearchPetFragment"
        android:label="@string/menu_search_pet"
        tools:layout="@layout/fragment_search_pets" />

    <fragment
        android:id="@+id/nav_search_owner"
        android:name="mx.edu.ittepic.ladm_u3_practica2_veterinariafirebase.ui.search_owners.SearchOwnerFragment"
        android:label="@string/menu_search_owner"
        tools:layout="@layout/fragment_search_owners" />
    <fragment
        android:id="@+id/nav_register_pet"
        android:name="mx.edu.ittepic.ladm_u3_practica2_veterinariafirebase.ui.register_pets.RegisterPetsFragment"
        android:label="@string/menu_register_pet"
        tools:layout="@layout/fragment_register_pet" />

    <fragment
        android:id="@+id/nav_register_owner"
        android:name="mx.edu.ittepic.ladm_u3_practica2_veterinariafirebase.ui.register_owners.RegisterOwnerFragment"
        android:label="@string/menu_register_owner"
        tools:layout="@layout/fragment_register_owner" />
</navigation>